--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        repository: cryptomator/android
+        ref: 1.10.3
+
     - name: set up JDK 11
       uses: actions/setup-java@v4
       with:
