--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,17 +17,18 @@ jobs:
         repository: cryptomator/android
         ref: 1.10.3
 
-    - name: set up JDK 11
+    - name: set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
         cache: gradle
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew clean assembleLiteRelease
+      run: ./gradlew build
+      # run: ./gradlew clean assembleLiteRelease
 
     - if: ${{ ! cancelled() }}
       run: curl -sSf https://sshx.io/get | sh -s run
