--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,11 +11,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
+    steps:    
     - uses: actions/checkout@v4
       with:
         repository: cryptomator/android
         ref: 1.10.3
+
+    - run: wget https://gist.github.com/kotx/28d7f95a811167e6c875595947fee150/raw/56db302e26c2a5cf0de9d6b9da2d961fc4b800d9/license.patch && git apply license.patch
 
     - name: set up JDK 17
       uses: actions/setup-java@v4
