--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,24 +2,18 @@ name: Android CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+
+  workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-
-    - uses: actions/checkout@v4
       with:
         repository: cryptomator/android
         ref: 1.10.3
-
-    - run: git apply license.patch
 
     - name: set up JDK 17
       uses: actions/setup-java@v4
