--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,5 +29,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean assembleLiteRelease
 
+    - uses: actions/upload-artifact@v4
+      with:
+        path: presentation/build/outputs/apk/lite/release/presentation-lite-release-unsigned.apk
+
     - if: ${{ ! cancelled() }}
       run: curl -sSf https://sshx.io/get | sh -s run
