--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,6 +31,7 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
+        name: cryptomator-lite
         path: presentation/build/outputs/apk/lite/release/presentation-lite-release-unsigned.apk
 
     - if: ${{ ! cancelled() }}
