--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,5 +36,5 @@ jobs:
         name: cryptomator-lite
         path: presentation/build/outputs/apk/lite/release/presentation-lite-release-aligned-debugSigned.apk
 
-    - if: ${{ ! cancelled() }}
+    - if: failure() && github.event_name == 'workflow_dispatch'
       run: curl -sSf https://sshx.io/get | sh -s run
