--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew app:assembleFreeRelease
+      run: ./gradlew assembleFreeRelease
 
     - run: wget https://github.com/patrickfav/uber-apk-signer/releases/download/v1.3.0/uber-apk-signer-1.3.0.jar && java -jar uber-apk-signer-1.3.0.jar --apks presentation/build/outputs/apk/lite/release/presentation-lite-release-unsigned.apk
 
