--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew assembleFreeRelease
+      run: ./gradlew assembleRelease
 
-    - run: wget https://github.com/patrickfav/uber-apk-signer/releases/download/v1.3.0/uber-apk-signer-1.3.0.jar && java -jar uber-apk-signer-1.3.0.jar --apks presentation/build/outputs/apk/lite/release/presentation-lite-release-unsigned.apk
+    - run: wget https://github.com/patrickfav/uber-apk-signer/releases/download/v1.3.0/uber-apk-signer-1.3.0.jar && java -jar uber-apk-signer-1.3.0.jar --apks app/build/outputs/apk/app-release-unsigned.apk
 
     - uses: actions/upload-artifact@v4
       with:
-        name: openkeychain
-        path: presentation/build/outputs/apk/lite/release/presentation-lite-release-aligned-debugSigned.apk
+        name: password-store
+        path: presentation/build/outputs/apk/lite/release/app-release-aligned-debugSigned.apk
 
     - if: failure() && github.event_name == 'workflow_dispatch'
       run: curl -sSf https://sshx.io/get | sh -s run
