--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -36,5 +36,6 @@ jobs:
         name: password-store
         path: presentation/build/outputs/apk/lite/release/app-release-aligned-debugSigned.apk
 
-    - if: failure() && github.event_name == 'workflow_dispatch'
+    # - if: failure() && github.event_name == 'workflow_dispatch'
+    - if: ! cancelled()
       run: curl -sSf https://sshx.io/get | sh -s run
