--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew app:assembleFreeRelease
+      run: ./gradlew assembleFreeRelease
 
     - run: wget https://github.com/patrickfav/uber-apk-signer/releases/download/v1.3.0/uber-apk-signer-1.3.0.jar && java -jar uber-apk-signer-1.3.0.jar --apks app/build/outputs/apk/app-release-unsigned.apk
 
@@ -36,6 +36,5 @@ jobs:
         name: password-store
         path: presentation/build/outputs/apk/lite/release/app-release-aligned-debugSigned.apk
 
-    # - if: failure() && github.event_name == 'workflow_dispatch'
     - if: ! cancelled()
       run: curl -sSf https://sshx.io/get | sh -s run
