--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: agrahn/Android-Password-Store
+        ref: latest
 
     - name: set up JDK 17
       uses: actions/setup-java@v4
