--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -13,7 +13,6 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: agrahn/Android-Password-Store
-        ref: latest
 
     - name: set up JDK 17
       uses: actions/setup-java@v4
@@ -37,5 +36,5 @@ jobs:
         name: password-store
         path: presentation/build/outputs/apk/lite/release/app-release-aligned-debugSigned.apk
 
-    - if: ! cancelled()
+    - if: ${{ !cancelled() }}
       run: curl -sSf https://sshx.io/get | sh -s run
