--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -22,7 +22,8 @@ jobs:
         cache: gradle
 
     - name: Change applicationIdSuffix and name
-      run: sed -i 's/.agrahn/_misc/g' app/build.gradle.kts && sed -i 's/Password Store/& (Misc)/g' app/src/main/res/values/strings.xml
+      run: sed -i 's/.agrahn//g' app/build.gradle.kts
+      # run: sed -i 's/.agrahn/_misc/g' app/build.gradle.kts && sed -i 's/Password Store/& (Misc)/g' app/src/main/res/values/strings.xml
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
