--- a/.github/workflows/clipious.yml
+++ b/.github/workflows/clipious.yml
@@ -25,10 +25,8 @@ jobs:
     - name: Change applicationIdSuffix and name
       run: sed -i 's/clipious/&_main/g' android/app/build.gradle && sed -i 's/Clipious/& (Main)/g' android/app/src/main/AndroidManifest.xml
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: cd android && ./gradlew assembleRelease
+    # https://docs.flutter.dev/deployment/android#build-an-apk
+    - run: flutter build apk --split-per-abi
 
     - run: wget https://github.com/patrickfav/uber-apk-signer/releases/download/v1.3.0/uber-apk-signer-1.3.0.jar && java -jar uber-apk-signer-1.3.0.jar --apks android/app/build/outputs/apk/clipious-release-unsigned.apk
 
