--- a/.github/workflows/password-store.yml
+++ b/.github/workflows/password-store.yml
@@ -22,8 +22,8 @@ jobs:
         cache: gradle
 
     - name: Change applicationIdSuffix and name
-      run: sed -i 's/.agrahn//g' app/build.gradle.kts
-      # run: sed -i 's/.agrahn/_misc/g' app/build.gradle.kts && sed -i 's/Password Store/& (Misc)/g' app/src/main/res/values/strings.xml
+      # run: sed -i 's/.agrahn//g' app/build.gradle.kts
+      run: sed -i 's/.agrahn/_main/g' app/build.gradle.kts && sed -i 's/Password Store/& (Main)/g' app/src/main/res/values/strings.xml
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
@@ -37,5 +37,5 @@ jobs:
         name: password-store
         path: app/build/outputs/apk/free/release/app-free-release-aligned-debugSigned.apk
 
-    - if: ${{ !cancelled() }}
+    - if: failure()
       run: curl -sSf https://sshx.io/get | sh -s run
